--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ requests==2.26.0
 celery[redis]==5.2.3
 sentry_sdk==1.5.6
 flower==1.0.0
-omnisdk
-channel_app
+omnisdk==0.0.99
+channel_app==0.0.118
